[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.caching"
dynamic = ["version"]
description = "A lightweight caching library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = [
  "caching",
  "dependency",
  "memory",
  "null",
  "memcache",
  "memcached",
  "pylibmc",
]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]
pylibmc = ["pylibmc"]
python-memcached = ["python-memcached==1.61"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.caching"
Source = "https://github.com/akornatskyy/wheezy.caching"
Issues = "https://github.com/akornatskyy/wheezy.caching/issues"

[tool.setuptools]
packages = ["wheezy.caching"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

# [tool.setuptools.package-data]
# "wheezy.core" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.caching.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/wheezy/caching"]
omit = ["*/test_*.py", "*/tests/*"]
